Prevent overlap of items on top toolbar

--- a/src/client/app/shared/html-editor/html-editor/html-editor.component.scss
+++ b/src/client/app/shared/html-editor/html-editor/html-editor.component.scss
@@ -1,3 +1,3 @@
 ::ng-deep .ql-tooltip {
-	z-index: 1;
+	z-index: 2;
 }
