--- a/src/client/app/shared/navigation/navigation/navigation.component.scss
+++ b/src/client/app/shared/navigation/navigation/navigation.component.scss
@@ -7,7 +7,7 @@ header {
 	top: 0;
 	width: 100%;
 	transition: top 0.3s;
-	z-index: 1;
+	z-index: 2;
 
 	a {
 		font-weight: bold;
